# formaptix-server

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
database/: __init__.py  answer.py  form.py  user.py
models/: __init__.py  answer.py  form.py  settings.py  user.py
routes/: __init__.py  admin.py  answer.py  form.py  user.py  utils.py
utils/: validator.py
